<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".alumno.Fragments.AlumnoApoyandoButtonFragment">

    <Button
        android:id="@+id/button11"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/black"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:text="@string/evento_notificaciones"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:icon="@drawable/icon_bell_ringing"
        app:iconPadding="4dp"
        app:iconTint="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonAbrirChat"
        style="?attr/materialIconButtonFilledStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/black"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:paddingHorizontal="12dp"
        android:text="@string/evento_chat"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:icon="@drawable/icon_chat"
        app:iconPadding="4dp"
        app:iconTint="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/button11"
        app:layout_constraintStart_toEndOf="@+id/button11" />

    <Button
        android:id="@+id/buttonEventoApoyando"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:backgroundTint="@color/azul_background"
        android:text="@string/evento_apoyando"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:iconTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth=".8dp" />
</androidx.constraintlayout.widget.ConstraintLayout>